<resources>
    <string name="app_name">WateringInterface</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_watering_server">Watering Server</string>
    <string name="pref_title_watering_server_host">Host</string>
    <string name="pref_title_watering_server_port">Port</string>

    <string name="pref_title_watering_server_host_default">localhost</string>
    <string name="pref_title_watering_server_port_default">5000</string>

    <string name="pref_title_behaviors">Pour behaviors</string>
    <string name="pref_title_behaviors_interval">Intervals</string>

    <string name="pref_title_behaviors_interval_default">1.0</string>
</resources>
